# yushin-gendfir-rag

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  evaluation.md
examples/: README.md
examples/scenarios/: lateral_movement.csv  syn_flood.csv  unauthorised_access.csv
gendfir/: __init__.py  chunking.py  cli.py  embeddings.py  llm.py  metrics.py  pipeline.py  prompts.py  retrieval.py
tests/: test_chunking.py  test_metrics.py  test_pipeline.py  test_retrieval.py
